test/sematic/resources/positive/func_and_nil.tig
let
    type linkedNode = {
        value : int,
        next : linkedNode
    }
    function empty() : linkedNode = nil
in
end