test/sematic/resources/negative/false_func_and_nil.tig
let
    type linkedNode = {
        value : int,
        next : linkedNode
    }
    var node := linkedNode{value = 0, next = nil}
    function empty() : nil = node
in
end